[package]
name = "game-boy-link-driver"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "=1.0.0-alpha.4" }
arraydeque = "0.4.5"
